--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "snap-dapp",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
+  "author": "Silence Laboratories",
+  "license": "SEE LICENSE IN LICENSE.md",
   "dependencies": {
     "@metamask/keyring-api": "^1.0.0-rc.1",
+    "@metamask/sdk-react": "^0.14.2",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-collapsible": "^1.0.3",
@@ -65,6 +68,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@craco/craco": "^7.1.0",
     "@types/mixpanel-browser": "^2.48.1",
     "@types/react-lazy-load-image-component": "^1.6.3",
