--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "license": "SEE LICENSE IN LICENSE.md",
   "dependencies": {
     "@metamask/keyring-api": "^1.0.0-rc.1",
-    "@metamask/sdk-react": "^0.14.2",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-popover": "^1.0.7",
@@ -32,8 +32,8 @@
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.13",
     "react-lazy-load-image-component": "^1.6.0",
-    "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
@@ -83,7 +83,8 @@
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "husky": "^8.0.0",
     "lint-staged": "^13.2.0",
-    "prettier": "^2.8.4"
+    "prettier": "^2.8.4",
+    "react-scripts": "5.0.1"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": "eslint --cache --fix"
