--- a/.github/workflows/artifact-builder.yaml
+++ b/.github/workflows/artifact-builder.yaml
@@ -22,7 +22,7 @@ jobs:
         run: |
           cat $ENV > .env
           REACT_APP_MIX_PANEL_TOKEN=$REACT_APP_MIX_PANEL_TOKEN CI=false npm run build
-          7z a ./dapp-v2.7z ../dapp-v2
+          7z a ./dapp-v2.7z ../silent-shard-dapp
 
       - name: Upload artifact
         uses: actions/upload-artifact@v2
