--- a/.github/workflows/artifact-builder.yaml
+++ b/.github/workflows/artifact-builder.yaml
@@ -22,13 +22,13 @@ jobs:
         run: |
           cat $ENV > .env
           REACT_APP_MIX_PANEL_TOKEN=$REACT_APP_MIX_PANEL_TOKEN CI=false npm run build
-          7z a ./dapp-v2.7z ../silent-shard-dapp
+        #   7z a ./dapp-v2.7z ../silent-shard-dapp
 
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
           name: dapp-v2
-          path: ./dapp-v2.7z
+          path: ../silent-shard-dapp
           
   deploy-staging:
     runs-on: dapp-v2-stagin
@@ -39,12 +39,12 @@ jobs:
         with:
           name: dapp-v2
           path: ./dapp-v2.7z
-      - name: Build artifact
-        run: |
-          mv dapp-v2.7z /opt/
-          cd /opt/
-          rm -r dapp-v2
-          7z x dapp-v2.7z
+    #   - name: Build artifact
+        # run: |
+        #   mv dapp-v2.7z /opt/
+        #   cd /opt/
+        #   rm -r dapp-v2
+        #   7z x dapp-v2.7z
         #   sudo systemctl restart dapp-v2-staging.service
   
 #       # Add steps to deploy to staging environment
