--- a/.github/workflows/artifact-builder.yaml
+++ b/.github/workflows/artifact-builder.yaml
@@ -38,10 +38,10 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: dapp-v2
-          path: .
+          path: ./dapp-v2
       - name: Build artifact
         run: |
-          mv dapp-v2.7z /opt/
+          mv ./dapp-v2/dapp-v2.7z /opt/
           cd /opt/
           rm -r dapp-v2
           7z x dapp-v2.7z
