--- a/.github/workflows/build-and-deploy-stagging.yaml
+++ b/.github/workflows/build-and-deploy-stagging.yaml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Build artifact
         run: |
-          cat $ENV_STAGING > .env
+          echo $ENV_STAGING > .env
           REACT_APP_MIX_PANEL_TOKEN=$REACT_APP_MIX_PANEL_TOKEN CI=false npm run build
           7z a ./dapp-v2.7z ../silent-shard-dapp
 
