--- a/.github/workflows/build-and-deploy-prod.yaml
+++ b/.github/workflows/build-and-deploy-prod.yaml
@@ -3,13 +3,13 @@ name: Build and Deploy
 on:
   push:
     branches:
-      - actions
+      - prod
 
 jobs:
-  build-and-deploy-staging:
+  build-and-deploy-prod:
     runs-on: self-hosted
     env:
-      ENV_STAGING: ${{ secrets.ENV_STAGING }}
+      ENV_PROD: ${{ secrets.ENV_PROD }}
       REACT_APP_MIX_PANEL_TOKEN: ${{ secrets.REACT_APP_MIX_PANEL_TOKEN }}
     steps:
       - name: Checkout repository
@@ -22,7 +22,7 @@ jobs:
 
       - name: Build artifact
         run: |
-          echo "${{ secrets.ENV_STAGING }}" | base64 -d > .env
+          echo "${{ secrets.ENV_PROD }}" | base64 -d > .env
           REACT_APP_MIX_PANEL_TOKEN=$REACT_APP_MIX_PANEL_TOKEN CI=false npm run build
           7z a ./dapp-v2.7z ../silent-shard-dapp
 
@@ -32,9 +32,9 @@ jobs:
           name: dapp-v2
           path: ./dapp-v2.7z
           
-  deploy-staging:
-    runs-on: dapp-v2-stagin
-    needs: build-and-deploy-staging
+  deploy-prod:
+    runs-on: dapp-v2-prod
+    needs: build-and-deploy-prod
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v2
@@ -43,8 +43,8 @@ jobs:
           path: ./dapp-v2
       - name: Build artifact
         run: |
-          mv ./dapp-v2/dapp-v2.7z /opt/
-          cd /opt/
+          mv ./dapp-v2/dapp-v2.7z /opt/app/
+          cd /opt/app/
           [ -d "silent-shard-dapp" ] && rm -r "silent-shard-dapp" 
           7z x dapp-v2.7z
-          sudo systemctl restart dapp-v2-staging.service
+          sudo systemctl restart dapp-v2.service
