--- a/package.json
+++ b/package.json
@@ -1,93 +1,6 @@
 {
-  "name": "snap-dapp",
-  "version": "1.0.0",
   "private": true,
-  "author": "Silence Laboratories",
-  "license": "SEE LICENSE IN LICENSE.md",
-  "dependencies": {
-    "@metamask/keyring-api": "^1.0.0-rc.1",
-    "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-collapsible": "^1.0.3",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-progress": "^1.0.3",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-tooltip": "^1.0.7",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.46",
-    "@types/react": "^18.2.21",
-    "@types/react-dom": "^18.2.7",
-    "animate.css": "^4.1.1",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "debounce": "^2.0.0",
-    "lucide-react": "^0.295.0",
-    "mixpanel-browser": "^2.48.1",
-    "qrcode.react": "^3.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-error-boundary": "^4.0.13",
-    "react-lazy-load-image-component": "^1.6.0",
-    "react-toastify": "^9.1.3",
-    "tailwind-merge": "^2.1.0",
-    "tailwindcss-animate": "^1.0.7",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "react-scripts test",
-    "prepare": "husky install",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
-    "eject": "react-scripts eject",
-    "postinstall": "husky install"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@craco/craco": "^7.1.0",
-    "@metamask/snaps-sdk": "^3.2.0",
-    "@types/mixpanel-browser": "^2.48.1",
-    "@types/react-lazy-load-image-component": "^1.6.3",
-    "@typescript-eslint/eslint-plugin": "^5.55.0",
-    "@typescript-eslint/parser": "^5.55.0",
-    "eslint": "8.30.0",
-    "eslint-config-prettier": "^8.7.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-simple-import-sort": "^8.0.0",
-    "husky": "^8.0.0",
-    "lint-staged": "^13.2.0",
-    "prettier": "^2.8.4",
-    "react-scripts": "5.0.1"
-  },
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx}": "eslint --cache --fix"
-  }
+  "workspaces": [
+    "packages/*"
+  ]
 }
