--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "snap-dapp",
+  "name": "@silencelaboratories/snap-dapp",
   "version": "1.0.0",
   "private": true,
   "author": "Silence Laboratories",
