--- a/packages/stackup/package.json
+++ b/packages/stackup/package.json
@@ -17,12 +17,14 @@
     "clsx": "^2.1.0",
     "ethers": "^6.11.0",
     "lottie-react": "^2.4.0",
+    "lucide-react": "^0.368.0",
     "next": "14.1.0",
     "qrcode.react": "^3.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-toastify": "^10.0.4",
-    "tailwind-merge": "^2.2.1",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7",
     "web3": "^4.7.0"
   },
   "devDependencies": {
