--- a/packages/stackup/package.json
+++ b/packages/stackup/package.json
@@ -27,7 +27,10 @@
     "react-toastify": "^10.0.4",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
-    "web3": "^4.7.0"
+    "web3": "^4.7.0",
+    "libsodium-wrappers": "^0.7.11",
+    "@silencelaboratories/ecdsa-tss": "^1.1.3",
+    "@ethereumjs/util": "^8.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -38,6 +41,7 @@
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
+    "@types/libsodium-wrappers": "^0.7.10",
     "typescript": "^5"
   }
 }
