--- a/packages/stackup/package.json
+++ b/packages/stackup/package.json
@@ -9,39 +9,46 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ethereumjs/util": "^8.0.5",
+    "@inquirer/prompts": "^2.0.0",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@silencelaboratories/ecdsa-tss": "^1.1.3",
+    "axios": "^1.2.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "ethers": "^6.11.0",
+    "commander": "^10.0.0",
+    "ethers": "^5.7.2",
+    "libsodium-wrappers": "^0.7.11",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.368.0",
     "next": "14.1.0",
+    "prettier": "^3.2.5",
     "qrcode.react": "^3.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-toastify": "^10.0.4",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
-    "web3": "^4.7.0",
-    "libsodium-wrappers": "^0.7.11",
-    "@silencelaboratories/ecdsa-tss": "^1.1.3",
-    "@ethereumjs/util": "^8.0.5"
+    "userop": "0.3.0",
+    "uuid": "^9.0.1",
+    "web3": "^4.7.0"
   },
   "devDependencies": {
+    "@types/libsodium-wrappers": "^0.7.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "@types/libsodium-wrappers": "^0.7.10",
     "typescript": "^5"
   }
 }
